kubernetes/talos/deploy/printer/mainsail/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mainsail
spec:
  ingressClassName: internal
  rules:
  - host: mainsail.vandeneede.org
    http:
      paths:
      - backend:
          service:
            name: mainsail
            port:
              name: http
        path: /
        pathType: ImplementationSpecific
